--- a/projects/01 SuperDuperDrive/cloudstorage/pom.xml
+++ b/projects/01 SuperDuperDrive/cloudstorage/pom.xml
@@ -89,6 +89,13 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
     <build>
